--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/TourismInArmenia
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
-##spring.jpa.hibernate.ddl-auto=update
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=100MB
-upload.image.path=C:\\Users\\User\\IdeaProjects\\TourismInArmenia\\src\\main\\resources\\static\\images\\
-
+#spring.jpa.hibernate.ddl-auto=update
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=200MB
+upload.image.path=C:\\Users\\Admin\\data\\lesons\\Java2022-23\\TourismInArmenia\\images\\
