--- a/tourArmenia-web/src/main/resources/application.yml
+++ b/tourArmenia-web/src/main/resources/application.yml
@@ -22,3 +22,6 @@ jwt:
 upload:
   image:
     path: C:\\Users\\Admin\\data\\lesons\\Java2022-23\\TourismInArmenia\\images\\
+
+site:
+  url: http://localhost:8081
