--- a/tourArmenia-common/pom.xml
+++ b/tourArmenia-common/pom.xml
@@ -61,6 +61,10 @@
             <version>1.5.3.Final</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
