--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jbpm.contrib</groupId>
+            <artifactId>google-translate-workitem</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jbpm.contrib</groupId>
+            <artifactId>google-translate-workitem</artifactId>
+            <version>7.73.0.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
